tests/rascal/negative/type_errors/L1/15_expression_ES10_D4_89.ob
MODULE Test15;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := 2;
               p := (~ (1223 = (y MOD z)));
               z := 1223;
               y := (+ (+ ((+ x) - (2 MOD 0))));
  (* error *)  x := ((- x) MOD 2);
               y := 2;
               p := ((y <= x) OR ((0 * 0) >= 1));
               z := (+ (0 DIV 1));
               r := r;
               p := (0 = 2)
END Test15.